--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -111,9 +111,54 @@
     "                    non_infinite_cycle_non_terminals.append(production.left_side)\n",
     "        return non_infinite_cycle_non_terminals\n",
     "    \n",
+    "    def production_has_non_infinite_cycle_non_terminals_on_right_side(self, non_infinite_cycle_non_terminals,\n",
+    "                                                                      production_right_side):\n",
+    "        has_non_infinite_cycle_non_terminals_on_right_side = False\n",
+    "        for non_terminal in non_infinite_cycle_non_terminals:\n",
+    "            if non_terminal in production_right_side:\n",
+    "                has_non_infinite_cycle_non_terminals_on_right_side = True\n",
+    "                break\n",
+    "        return has_non_infinite_cycle_non_terminals_on_right_side\n",
+    "\n",
+    "    def production_has_suspected_non_terminals_on_right_side(self, suspected_non_terminals,\n",
+    "                                                                      production_right_side):\n",
+    "        has_suspected_non_terminals_on_right_side = False\n",
+    "        for non_terminal in suspected_non_terminals:\n",
+    "            if non_terminal in production_right_side:\n",
+    "                has_suspected_non_terminals_on_right_side = True\n",
+    "                break\n",
+    "        return has_suspected_non_terminals_on_right_side\n",
+    "    \n",
+    "    def safe_production(self, non_infinite_cycle_non_terminals, suspected_non_terminals, production):\n",
+    "        is_safe =  (self.production_has_right_side_of_terminals(production) or\n",
+    "                self.production_has_null_sequence_on_right_side(production))\n",
+    "        is_safe = is_safe or self.production_has_non_infinite_cycle_non_terminals_on_right_side(\n",
+    "            non_infinite_cycle_non_terminals, production.right_side)\n",
+    "        is_safe = is_safe and not self.production_has_suspected_non_terminals_on_right_side(suspected_non_terminals,\n",
+    "                                                                                           production.right_side)\n",
+    "        return is_safe\n",
+    "    \n",
     "    def production_with_infinite_cycle(self, productions):\n",
-    "        non_infinite_cycle_non_terminals = self.base_case_non_infinite_cycle_non_terminals(productions)\n",
-    "        suspected_non_terminals = list(filter(lambda n\n",
+    "        infinite_cycle = False\n",
+    "        non_infinite_cycle_non_terminals = []\n",
+    "        suspected_non_terminals = self.non_terminals.copy()\n",
+    "        suspected_productions = productions.copy()\n",
+    "        production_infinite_cycle = None\n",
+    "        n_suspected_productions_before = len(suspected_productions)\n",
+    "        n_suspected_productions_after = len(suspected_productions)\n",
+    "        while suspected_productions:\n",
+    "            n_suspected_productions_before = len(suspected_productions)\n",
+    "            for production in suspected_productions:\n",
+    "                if self.safe_production(non_infinite_cycle_non_terminals, suspected_non_terminals, production):\n",
+    "                    if not production.left_side in non_infinite_cycle_non_terminals:\n",
+    "                        non_infinite_cycle_non_terminals.append(production.left_side)\n",
+    "                        suspected_non_terminals.remove(production.left_side)\n",
+    "                    suspected_productions.remove(production)\n",
+    "            n_suspected_productions_after = len(suspected_productions)\n",
+    "            if n_suspected_productions_before == n_suspected_productions_after:\n",
+    "                infinite_cycle = True\n",
+    "                break\n",
+    "        return infinite_cycle\n",
     "    \n",
     "    def validate_productions(self, productions):\n",
     "        pass\n",
@@ -141,7 +186,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
