--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -2,26 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Production as p"
+    "import Production as p\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ProductionCreator:\n",
     "    \n",
-    "    def __init__(self, string_separator, non_terminal_start, non_terminal_finish, arrow_tail):\n",
+    "    def __init__(self, string_separator, non_terminal_start, non_terminal_finish, arrow_tail, arrow_op):\n",
     "        self.string_separator = string_separator\n",
     "        self.non_terminal_start = non_terminal_start\n",
     "        self.non_terminal_finish = non_terminal_finish\n",
     "        self.arrow_tail = arrow_tail\n",
+    "        self.arrow_op = arrow_op\n",
+    "        \n",
+    "    def production_has_arrow_op(self, string):\n",
+    "        return re.search(self.arrow_op, string) != None\n",
     "    \n",
     "    def from_string_to_list(self, string):\n",
     "        _list = []\n",
@@ -37,12 +42,15 @@
     "            else:\n",
     "                end += 1\n",
     "        if start < len(string):\n",
-    "            _list += string[start:]\n",
+    "            _list.append(string[start:])\n",
     "        return _list\n",
     "    \n",
     "    def create_productions(self, string_list):\n",
     "        productions = []\n",
     "        for string in string_list:\n",
+    "            if not self.production_has_arrow_op(string):\n",
+    "                productions = []\n",
+    "                break\n",
     "            left_side = string[0: string.index(self.arrow_tail)]\n",
     "            right_side = []\n",
     "            right_string = string[string.index(self.arrow_tail)+2:]\n",
@@ -74,15 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ProductionValidator:\n",
     "    \n",
-    "    def __init__(self, non_terminals, null_sequence_symbol):\n",
+    "    def __init__(self, non_terminals, null_sequence_symbol, non_terminal_pattern, special_characters):\n",
     "        self.non_terminals = non_terminals\n",
     "        self.null_sequence_symbol = null_sequence_symbol\n",
+    "        self.non_terminal_pattern = non_terminal_pattern\n",
+    "        self.special_characters = special_characters\n",
     "\n",
     "    def is_non_terminal(self, symbol):\n",
     "        return symbol in self.non_terminals\n",
@@ -101,15 +111,6 @@
     "                has_right_side_of_terminals = False\n",
     "                break\n",
     "        return has_right_side_of_terminals\n",
-    "    \n",
-    "    def base_case_non_infinite_cycle_non_terminals(self, productions):\n",
-    "        non_infinite_cycle_non_terminals = []\n",
-    "        for production in productions:\n",
-    "            if (self.production_has_right_side_of_terminals(production) or\n",
-    "                self.production_has_null_sequence_on_right_side(production)):\n",
-    "                if not production.left_side in non_infinite_cycle_non_terminals:\n",
-    "                    non_infinite_cycle_non_terminals.append(production.left_side)\n",
-    "        return non_infinite_cycle_non_terminals\n",
     "    \n",
     "    def production_has_non_infinite_cycle_non_terminals_on_right_side(self, non_infinite_cycle_non_terminals,\n",
     "                                                                      production_right_side):\n",
@@ -160,6 +161,39 @@
     "                break\n",
     "        return infinite_cycle\n",
     "    \n",
+    "    def non_terminal_is_well_written(self, non_terminal):\n",
+    "        return re.search(self.non_terminal_pattern, non_terminal) != None\n",
+    "    \n",
+    "    def right_side_is_well_written(self, right_side):\n",
+    "        if len(right_side) == 0:\n",
+    "            return False\n",
+    "        if self.null_sequence_symbol in right_side:\n",
+    "            return len(right_side) == 1\n",
+    "        well_written = True\n",
+    "        for symbol in right_side:\n",
+    "            if self.is_non_terminal(symbol):\n",
+    "                if not self.non_terminal_is_well_written(symbol):\n",
+    "                    well_written = False\n",
+    "                    break\n",
+    "            elif symbol in self.special_characters:\n",
+    "                well_written = False\n",
+    "                break\n",
+    "        return well_written\n",
+    "            \n",
+    "    \n",
+    "    def productions_are_well_written(self, productions):\n",
+    "        well_written = True\n",
+    "        if not productions:\n",
+    "            well_written = False\n",
+    "        for production in productions:\n",
+    "            if (not self.non_terminal_is_well_written(production.left_side) or\n",
+    "                not self.right_side_is_well_written(production.right_side)):\n",
+    "                well_written = False\n",
+    "                break\n",
+    "        return well_written\n",
+    "    \n",
+    "\n",
+    "    \n",
     "    def validate_productions(self, productions):\n",
     "        pass\n",
     "    \n",
@@ -168,17 +202,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Production.Production object at 0x00000244EBC341C8>, <Production.Production object at 0x00000244EBC346C8>, <Production.Production object at 0x00000244EBC34188>, <Production.Production object at 0x00000244EBC18448>, <Production.Production object at 0x00000244EBC189C8>, <Production.Production object at 0x00000244EBBE7788>, <Production.Production object at 0x00000244EBBE7F88>]\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "string_separator = '\\n'\n",
     "non_terminal_start = '<'\n",
     "non_terminal_finish = '>'\n",
     "arrow_tail = '-'\n",
-    "string = '<A>->as\\n\\n\\n\\n<B>-><A>s\\n\\n\\n\\n\\n<C>->c\\n<M>->df\\n\\n\\n\\n\\n\\n\\n\\n'\n",
-    "p_c = ProductionCreator(string_separator, non_terminal_start, non_terminal_finish, arrow_tail)\n",
-    "productions = p_c.create_productions(p_c.from_string_to_list(string))"
+    "arrow_head = '>'\n",
+    "null_sequence_symbol = '%'\n",
+    "empty_stack_symbol = '$'\n",
+    "end_of_sequence_symbol = '!'\n",
+    "non_terminal_pattern = '<[a-zA-Z]+>'\n",
+    "arrow_op = '-{1}>{1}'\n",
+    "special_characters = [arrow_tail, arrow_head, empty_stack_symbol, end_of_sequence_symbol, non_terminal_start,\n",
+    "non_terminal_finish]\n",
+    "string = '<A>->as\\n\\n\\n\\n<B>-><A>s\\n\\n\\n\\n\\n<C>->c\\n<M>->>df\\n\\n\\n\\n\\n\\n\\n\\n<H>-><H>\\n<H>-><A><H>\\n<H>->h'\n",
+    "p_c = ProductionCreator(string_separator, non_terminal_start, non_terminal_finish, arrow_tail, arrow_op)\n",
+    "string_list = p_c.from_string_to_list(string)\n",
+    "productions = p_c.create_productions(string_list)\n",
+    "print(productions)\n",
+    "non_terminals = p_c.get_non_terminals(productions)\n",
+    "p_v = ProductionValidator(non_terminals, null_sequence_symbol, non_terminal_pattern, special_characters)\n",
+    "print(p_v.productions_are_well_written(productions))"
    ]
   },
   {
