--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,15 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Production.Production object at 0x00000244EBC341C8>, <Production.Production object at 0x00000244EBC346C8>, <Production.Production object at 0x00000244EBC34188>, <Production.Production object at 0x00000244EBC18448>, <Production.Production object at 0x00000244EBC189C8>, <Production.Production object at 0x00000244EBBE7788>, <Production.Production object at 0x00000244EBBE7F88>]\n",
-      "False\n"
+      "True\n"
      ]
     }
    ],
@@ -227,15 +226,21 @@
     "arrow_op = '-{1}>{1}'\n",
     "special_characters = [arrow_tail, arrow_head, empty_stack_symbol, end_of_sequence_symbol, non_terminal_start,\n",
     "non_terminal_finish]\n",
-    "string = '<A>->as\\n\\n\\n\\n<B>-><A>s\\n\\n\\n\\n\\n<C>->c\\n<M>->>df\\n\\n\\n\\n\\n\\n\\n\\n<H>-><H>\\n<H>-><A><H>\\n<H>->h'\n",
+    "string = '<A>->as\\n\\n\\n\\n<B>-><A>s\\n\\n\\n\\n\\n<C>->c\\n<M>->df\\n\\n\\n\\n\\n\\n\\n\\n<H>-><H>\\n<H>-><A><H>\\n<H>->h'\n",
     "p_c = ProductionCreator(string_separator, non_terminal_start, non_terminal_finish, arrow_tail, arrow_op)\n",
     "string_list = p_c.from_string_to_list(string)\n",
     "productions = p_c.create_productions(string_list)\n",
-    "print(productions)\n",
     "non_terminals = p_c.get_non_terminals(productions)\n",
     "p_v = ProductionValidator(non_terminals, null_sequence_symbol, non_terminal_pattern, special_characters)\n",
     "print(p_v.productions_are_well_written(productions))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
