--- a/PDAC0.ipynb
+++ b/PDAC0.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import NecessarySets as ns\n",
     "import PDA as pda"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +46,6 @@
     "    def get_productions_number_same_non_terminal_l_side(self, productions_same_l_side):\n",
     "        productions_number_same_l_side = []\n",
     "        for production in productions_same_l_side:\n",
-    "            print(self.productions.index(production))\n",
     "            productions_number_same_l_side.append(self.productions.index(production))\n",
     "        return productions_number_same_l_side\n",
     "    \n",
@@ -217,7 +215,7 @@
     "                    transitions.append(transition)\n",
     "                    n += 1\n",
     "                    continue\n",
-    "                elif symbol == self.empty_PDA_symbol and input_symbol == end_of_sequence_symbol:\n",
+    "                elif symbol == self.empty_PDA_symbol and input_symbol == self.end_of_sequence_symbol:\n",
     "                    transition = pda.Transition('A', None, None)\n",
     "                    transitions.append(transition)\n",
     "                    continue\n",
@@ -251,7 +249,7 @@
     "                    transitions.append(transition)\n",
     "                    n += 1\n",
     "                    continue\n",
-    "                elif symbol == self.empty_PDA_symbol and input_symbol == end_of_sequence_symbol:\n",
+    "                elif symbol == self.empty_PDA_symbol and input_symbol == self.end_of_sequence_symbol:\n",
     "                    transition = pda.Transition('A', None, None)\n",
     "                    transitions.append(transition)\n",
     "                    continue\n",
@@ -302,7 +300,7 @@
     "                    transitions.append(transition)\n",
     "                    n += 1\n",
     "                    continue\n",
-    "                elif symbol == self.empty_PDA_symbol and input_symbol == end_of_sequence_symbol:\n",
+    "                elif symbol == self.empty_PDA_symbol and input_symbol == self.end_of_sequence_symbol:\n",
     "                    transition = pda.Transition('A', None, None)\n",
     "                    transitions.append(transition)\n",
     "                    continue\n",
@@ -312,11 +310,10 @@
     "        return pda.TransitionTable(symbols_in_PDA, input_symbols_PDA, 'S0', table)\n",
     "    \n",
     "    def create_PDA(self):\n",
-    "        push_down_automata = None\n",
+    "        result = []\n",
     "        input_symbols = self.get_input_symbols_PDA()\n",
     "        symbols_in_PDA = self.get_symbols_in_PDA()\n",
     "        initial_configuration = self.get_initial_configuration_PDA()\n",
-    "        discarded_grammars = []\n",
     "        s_grammar = self.is_s_grammar()\n",
     "        q_grammar = self.is_q_grammar()\n",
     "        ll_grammar = self.is_ll_grammar()\n",
@@ -326,112 +323,26 @@
     "            transition_table.print_table()\n",
     "            push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
     "                                                      initial_configuration, transition_table)\n",
-    "            return push_down_automata\n",
+    "            result.append(('It is S grammar', push_down_automata, True))\n",
     "        else:\n",
-    "            discarded_grammars.append(s_grammar[1])\n",
+    "            result.append(('It is not S grammar for this production: ', s_grammar[1], False))\n",
     "        if q_grammar[0] == 0:\n",
     "            transition_table = self.get_transition_table_q_grammar(symbols_in_PDA, input_symbols)\n",
     "            push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
     "                                                        initial_configuration, transition_table)\n",
-    "            return push_down_automata\n",
+    "            result.append(('It is Q grammar', push_down_automata, True))\n",
     "        else:\n",
-    "            discarded_grammars.append(q_grammar[1])\n",
+    "            result.append(('It is not Q grammar for this production: ', q_grammar[1], False))\n",
     "        if ll_grammar[0] == 0:\n",
     "            transition_table = self.get_transition_table_ll_grammar(symbols_in_PDA, input_symbols)\n",
     "            push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
     "                                                        initial_configuration, transition_table)\n",
-    "            return push_down_automata\n",
+    "            result.append(('It is LL grammar', push_down_automata, True))\n",
     "        else:\n",
-    "            discarded_grammars.append(ll_grammar[1])\n",
+    "            result.append(('It is not LL grammar for this production: ', ll_grammar[1], False))\n",
     "        \n",
-    "        return discarded_grammars"
+    "        return result"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "end_of_sequence_symbol = '!'\n",
-    "null_sequence_symbol = '%'\n",
-    "empty_PDA_symbol = '$'\n",
-    "initial_non_terminal = '<A>'\n",
-    "non_terminals = ['<A>', '<B>', '<D>', '<E>']\n",
-    "p = [ns.Production('<A>', ['a', '<B>', '<D>']), ns.Production('<A>', ['<D>','b', '<A>']), ns.Production('<B>', ['%']),\n",
-    "ns.Production('<B>', ['b', '<A>', '<B>']), ns.Production('<C>', ['c', '<C>']), ns.Production('<C>', ['<D>', 'd', '<B>']),\n",
-    "ns.Production('<D>', ['%']), ns.Production('<D>', ['e', '<E>']), ns.Production('<E>', ['<B>', '<D>']),\n",
-    "ns.Production('<E>', ['f'])]\n",
-    "stack_operations = pda.StackOperation()\n",
-    "p_set = ns.ProductionSet(initial_non_terminal, null_sequence_symbol, end_of_sequence_symbol, p, non_terminals)\n",
-    "nullable_non_terminals = p_set.get_nullable_non_terminals()\n",
-    "nullable_productions = p_set.get_nullable_productions(nullable_non_terminals)\n",
-    "set_of_firsts_for_non_terminals = p_set.replace_non_terminals(p_set.get_firsts_base_cases(nullable_non_terminals))\n",
-    "set_of_firsts_for_productions = p_set.get_set_of_firsts_for_productions(nullable_non_terminals, set_of_firsts_for_non_terminals)\n",
-    "set_of_nexts = p_set.replace_non_terminals(p_set.get_nexts_base_cases(nullable_non_terminals,\n",
-    "                                                                                        set_of_firsts_for_non_terminals))\n",
-    "selection_set = p_set.get_set_of_selection_for_productions(nullable_productions, set_of_firsts_for_productions, set_of_nexts)\n",
-    "pda_creator = PDACreator(end_of_sequence_symbol, null_sequence_symbol, empty_PDA_symbol, initial_non_terminal, non_terminals,\n",
-    "                        p, stack_operations, selection_set)\n",
-    "push_down_automata = pda_creator.create_PDA()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(1)==type(list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'type'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
