--- a/PDAC6.ipynb
+++ b/PDAC6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +63,12 @@
     "                terminals.add(symbol)\n",
     "        return terminals\n",
     "    \n",
+    "    def get_productions_with_numbers(self, numbers):\n",
+    "        productions_with_numbers = []\n",
+    "        for number in numbers:\n",
+    "            productions_with_numbers.append(self.productions[number])\n",
+    "        return productions_with_numbers\n",
+    "    \n",
     "    def is_s_grammar(self):\n",
     "        s_grammar = (0, None)\n",
     "        for non_terminal in self.non_terminals:\n",
@@ -100,7 +106,7 @@
     "    def get_selection_sets_not_disjoint(self, production_numbers):\n",
     "        sets = set()\n",
     "        for number in production_numbers:\n",
-    "            index = production_numbers.index(production_numbers[number])+1\n",
+    "            index = production_numbers.index(number)+1\n",
     "            current_set = self.selection_set[number]\n",
     "            while(index < len(production_numbers)):\n",
     "                current_set = current_set.intersection(self.selection_set[production_numbers[index]])\n",
@@ -119,7 +125,8 @@
     "            productions_number_same_l_side = self.get_productions_number_same_non_terminal_l_side(\n",
     "            productions_same_non_terminal_l_side)\n",
     "            if not self.selection_sets_are_disjoint(productions_number_same_l_side):\n",
-    "                q_grammar = (1, self.get_selection_sets_not_disjoint(productions_number_same_l_side))\n",
+    "                q_grammar = (1, self.get_productions_with_numbers(self.get_selection_sets_not_disjoint(\n",
+    "                    productions_number_same_l_side))) # selection_sets are joint\n",
     "                break\n",
     "            for production in productions_same_non_terminal_l_side:\n",
     "                if self.is_terminal(production.right_side[0]):\n",
@@ -142,7 +149,8 @@
     "            productions_number_same_l_side = self.get_productions_number_same_non_terminal_l_side(\n",
     "            productions_same_non_terminal_l_side)\n",
     "            if not self.selection_sets_are_disjoint(productions_number_same_l_side):\n",
-    "                ll_grammar = (1, self.get_selection_sets_not_disjoint(productions_number_same_l_side))\n",
+    "                ll_grammar = (1, self.get_productions_with_numbers(self.get_selection_sets_not_disjoint(\n",
+    "                    productions_number_same_l_side)))\n",
     "                break\n",
     "        return ll_grammar\n",
     "    \n",
@@ -215,7 +223,7 @@
     "                    transitions.append(transition)\n",
     "                    n += 1\n",
     "                    continue\n",
-    "                elif symbol == self.empty_PDA_symbol and input_symbol == end_of_sequence_symbol:\n",
+    "                elif symbol == self.empty_PDA_symbol and input_symbol == self.end_of_sequence_symbol:\n",
     "                    transition = pda.Transition('A', None, None)\n",
     "                    transitions.append(transition)\n",
     "                    continue\n",
@@ -249,7 +257,7 @@
     "                    transitions.append(transition)\n",
     "                    n += 1\n",
     "                    continue\n",
-    "                elif symbol == self.empty_PDA_symbol and input_symbol == end_of_sequence_symbol:\n",
+    "                elif symbol == self.empty_PDA_symbol and input_symbol == self.end_of_sequence_symbol:\n",
     "                    transition = pda.Transition('A', None, None)\n",
     "                    transitions.append(transition)\n",
     "                    continue\n",
@@ -300,7 +308,7 @@
     "                    transitions.append(transition)\n",
     "                    n += 1\n",
     "                    continue\n",
-    "                elif symbol == self.empty_PDA_symbol and input_symbol == end_of_sequence_symbol:\n",
+    "                elif symbol == self.empty_PDA_symbol and input_symbol == self.end_of_sequence_symbol:\n",
     "                    transition = pda.Transition('A', None, None)\n",
     "                    transitions.append(transition)\n",
     "                    continue\n",
@@ -310,6 +318,7 @@
     "        return pda.TransitionTable(symbols_in_PDA, input_symbols_PDA, 'S0', table)\n",
     "    \n",
     "    def create_PDA(self):\n",
+    "        push_down_automata = None\n",
     "        result = []\n",
     "        input_symbols = self.get_input_symbols_PDA()\n",
     "        symbols_in_PDA = self.get_symbols_in_PDA()\n",
@@ -320,26 +329,41 @@
     "        \n",
     "        if s_grammar[0] == 0:\n",
     "            transition_table = self.get_transition_table_s_grammar(symbols_in_PDA, input_symbols)\n",
-    "            transition_table.print_table()\n",
     "            push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
     "                                                      initial_configuration, transition_table)\n",
     "            result.append(('It is S grammar', push_down_automata, True))\n",
-    "        else:\n",
-    "            result.append(('It is not S grammar for this production: ', s_grammar[1], False))\n",
+    "        elif s_grammar[0] == 1:\n",
+    "            result.append(('It is not S grammar, same non terminal starts with same terminal: ', s_grammar[1], False))\n",
+    "        elif s_grammar[0] == 2:\n",
+    "            result.append(('It is not S grammar, production starts with a non terminal: ', [s_grammar[1]], False))\n",
+    "        elif s_grammar[0] == 3:\n",
+    "            result.append(('It is not S grammar, production is nullable: ', [s_grammar[1]], False))\n",
+    "            \n",
     "        if q_grammar[0] == 0:\n",
     "            transition_table = self.get_transition_table_q_grammar(symbols_in_PDA, input_symbols)\n",
-    "            push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
-    "                                                        initial_configuration, transition_table)\n",
-    "            result.append(('It is Q grammar', push_down_automata, True))\n",
-    "        else:\n",
-    "            result.append(('It is not Q grammar for this production: ', q_grammar[1], False))\n",
+    "            if not push_down_automata:\n",
+    "                push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
+    "                                                           initial_configuration, transition_table)\n",
+    "                result.append(('It is Q grammar', push_down_automata, True))\n",
+    "            else:\n",
+    "                result.append(('It is Q grammar', None, True))\n",
+    "        elif q_grammar[0] == 1:\n",
+    "            result.append(('It is not Q grammar, selection sets of these productions are not disjoint: ', q_grammar[1], False))\n",
+    "        elif q_grammar[0] == 2:\n",
+    "            result.append(('It is not Q grammar, same non terminal starts with same terminal: ', [q_grammar[1]], False))\n",
+    "        elif q_grammar[0] == 3:\n",
+    "            result.append(('It is not Q grammar, production starts with a non terminal: ', [q_grammar[1]], False))\n",
     "        if ll_grammar[0] == 0:\n",
     "            transition_table = self.get_transition_table_ll_grammar(symbols_in_PDA, input_symbols)\n",
-    "            push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
-    "                                                        initial_configuration, transition_table)\n",
-    "            result.append(('It is LL grammar', push_down_automata, True))\n",
-    "        else:\n",
-    "            result.append(('It is not LL grammar for this production: ', ll_grammar[1], False))\n",
+    "            if not push_down_automata:\n",
+    "                push_down_automata = pda.PushDownAutomaton(input_symbols, self.end_of_sequence_symbol, 'A', 'R',\n",
+    "                                                           initial_configuration, transition_table)\n",
+    "                result.append(('It is LL grammar', push_down_automata, True))\n",
+    "            else:\n",
+    "                result.append(('It is LL grammar', None, True))\n",
+    "            \n",
+    "        elif ll_grammar[0] == 1:\n",
+    "            result.append(('It is not LL grammar, selection sets of these productions are not disjoint: ', ll_grammar[1], False))\n",
     "        \n",
     "        return result"
    ]
