--- a/Untitled6.ipynb
+++ b/Untitled6.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
     "import PCV\n",
     "import WindowCreator as wc\n",
     "import NecessarySets as ns\n",
-    "import PDAC0\n",
+    "import PDAC6\n",
     "import PDA as pda"
    ]
   },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,17 +109,30 @@
     "                                                                   set_of_firsts_for_productions, set_of_nexts)\n",
     "        return selection_set\n",
     "    \n",
-    "    def obtained_pda(self):\n",
-    "        if type(self.push_down_automata) == type([]):\n",
-    "            print(self.push_down_automata)\n",
-    "            return False\n",
-    "        return True\n",
-    "    \n",
-    "    def print_productions(self, productions):\n",
-    "        for production in productions:\n",
-    "            print(production.left_side, production.right_side)\n",
+    "    def obtain_pda(self):\n",
+    "        results = self.pda_creator.create_PDA()\n",
+    "        report = ''\n",
+    "        for result in results:\n",
+    "            if result[2]:\n",
+    "                report += (result[0] + '\\n')\n",
+    "                if not self.push_down_automata:\n",
+    "                    self.push_down_automata = result[1]\n",
+    "            else:\n",
+    "                report += result[0]\n",
+    "                for production in result[1]:\n",
+    "                    if not result[1].index(production) == len(result[1])-1:\n",
+    "                        report += (production.left_side + '->' + ''.join(production.right_side) + ', ')\n",
+    "                    else:\n",
+    "                        report += (production.left_side + '->' +''.join(production.right_side) + '\\n')\n",
+    "        wc.show_info_message(report)\n",
+    "        if self.push_down_automata:\n",
+    "            wc.show_info_message('Automata Created')\n",
+    "        else:\n",
+    "            wc.show_info_message('Automata was not Created')\n",
+    "        \n",
     "    def create_push_down_automata(self):\n",
     "        string = self.txt_box.get(\"1.0\",\"end-1c\")\n",
+    "        self.push_down_automata = None\n",
     "        productions = self.production_creator.create_productions(self.production_creator.from_string_to_list(string))\n",
     "        if not productions:\n",
     "            wc.show_error_message(self.ui_variables['input_err_m'])\n",
@@ -133,38 +146,21 @@
     "                self.production_set = ns.ProductionSet(initial_non_terminal, self.pcv_variables['null_sequence_symbol'],\n",
     "                                                 self.pcv_variables['end_of_sequence_symbol'], productions, non_terminals)\n",
     "                selection_set = self.get_selection_set()\n",
-    "                print(selection_set)\n",
     "                stack_operations = pda.StackOperation()\n",
-    "                self.pda_creator = PDAC0.PDACreator(self.pcv_variables['end_of_sequence_symbol'], \n",
+    "                self.pda_creator = PDAC6.PDACreator(self.pcv_variables['end_of_sequence_symbol'], \n",
     "                                                   self.pcv_variables['null_sequence_symbol'],\n",
     "                                                   self.pcv_variables['empty_stack_symbol'],\n",
     "                                                   initial_non_terminal, non_terminals, productions, stack_operations,\n",
     "                                                   selection_set)\n",
-    "                self.push_down_automata = self.pda_creator.create_PDA()\n",
-    "                print(self.push_down_automata)\n",
+    "                self.obtain_pda()\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'b'}, {'a'}, {'b'}, {'a'}]\n",
-      "<C>( #0 R #1 R )\n",
-      "<B>( #2 R #3 R )\n",
-      "$( R R R A )\n",
-      "d( R #4 R R )\n",
-      "[('It is S grammar', <PDA.PushDownAutomaton object at 0x000001F9FBB78C08>, True), ('It is Q grammar', <PDA.PushDownAutomaton object at 0x000001F9FBBCDDC8>, True), ('It is LL grammar', <PDA.PushDownAutomaton object at 0x000001F9FBB7ACC8>, True)]\n",
-      "[{'a'}, {'b'}, {'a'}, {'b'}, {'a'}, {'b'}, {'!', 'c'}]\n",
-      "[('It is not S grammar for this production: ', <Production.Production object at 0x000001F9FDA0F888>, False), ('It is Q grammar', <PDA.PushDownAutomaton object at 0x000001F9FD9F5148>, True), ('It is LL grammar', <PDA.PushDownAutomaton object at 0x000001F9FD9F5AC8>, True)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "app = App(pcv_variables, ui_variables)\n",
     "app.start()"
@@ -172,9 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 247,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ab\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
