--- a/Untitled6.ipynb
+++ b/Untitled6.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,6 @@
     "    def __init__(self, pcv_variables, ui_variables):\n",
     "        self.pcv_variables = pcv_variables\n",
     "        self.ui_variables = ui_variables\n",
-    "        self.grammar_variables = grammar_variables\n",
     "        self.window = None\n",
     "        self.txt_box = None\n",
     "        self.b_pda = None\n",
@@ -101,10 +100,12 @@
     "        nullable_productions = self.production_set.get_nullable_productions(nullable_non_terminals)\n",
     "        set_of_firsts_for_non_terminals = self.production_set.replace_non_terminals(self.production_set.get_firsts_base_cases(\n",
     "            nullable_non_terminals))\n",
+    "        print('primeros', set_of_firsts_for_non_terminals)\n",
     "        set_of_firsts_for_productions = self.production_set.get_set_of_firsts_for_productions(nullable_non_terminals,\n",
     "                                                                                set_of_firsts_for_non_terminals)\n",
     "        set_of_nexts = self.production_set.replace_non_terminals(self.production_set.get_nexts_base_cases(\n",
     "            nullable_non_terminals, set_of_firsts_for_non_terminals))\n",
+    "        print('siguiente', set_of_nexts)\n",
     "        selection_set = self.production_set.get_set_of_selection_for_productions(nullable_productions,\n",
     "                                                                   set_of_firsts_for_productions, set_of_nexts)\n",
     "        return selection_set\n",
@@ -158,9 +159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "primeros [['<S>', {'a', 'z'}], ['<A>', {'a', 'z'}], ['<B>', {'b'}], ['<C>', {'a', 'z'}], ['<D>', {'d'}], ['<E>', {'a', 'z'}], ['<F>', {'d'}]]\n",
+      "siguiente [['<S>', {'e', '!'}], ['<A>', {'!', 'e', 'b'}], ['<B>', {'e', '!'}], ['<C>', {'d', '!', 'b', 'e'}], ['<D>', {'b', 'e', '!'}], ['<E>', {'!', 'e', 'b'}], ['<F>', {'!', 'e', 'b'}]]\n"
+     ]
+    }
+   ],
    "source": [
     "app = App(pcv_variables, ui_variables)\n",
     "app.start()"
@@ -168,17 +178,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ab\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
